--- a/index.html
+++ b/index.html
@@ -55,49 +55,184 @@
     </header>
     <!-- Header end -->
 
-    <!-- slider -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <main>
+        <!-- slider -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 
-        <div class="carousel-inner">
-            <div class="carousel-item active position-relative">
-                <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-                    <h2 class="fs-1">Welcome to Bangla Master</h2>
-                    <p>Bangla Master is Bangladeshi online learning platform. We are very carefull about the
-                        student and their courses.</p>
-                    <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
+            <div class="carousel-inner">
+                <div class="carousel-item active position-relative">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
+                        <h2 class="fs-1">Welcome to Bangla Master</h2>
+                        <p>Bangla Master is Bangladeshi online learning platform. We are very carefull about the
+                            student and their courses.</p>
+                        <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images//cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
+                        <h2 class="fs-1">Let's start today</h2>
+                        <p>We can start is any time when we want. It is detail learning platform. We have many
+                            online courses.</p>
+                        <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
+                        <h2 class="fs-1">Click & start your journey</h2>
+                        <p>It's very easy to operate. Any one can register and countinue with us. Every one will be
+                            happy
+                            with us and our learning system</p>
+                        <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
+                    </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="images//cover/cover-2.jpg" class="d-block w-100" alt="...">
-                <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-                    <h2 class="fs-1">Let's start today</h2>
-                    <p>We can start is any time when we want. It is detail learning platform. We have many
-                        online courses.</p>
-                    <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                <div class="position-absolute top-50 start-50 translate-middle text-white text-center">
-                    <h2 class="fs-1">Click & start your journey</h2>
-                    <p>It's very easy to operate. Any one can register and countinue with us. Every one will be happy
-                        with us and our learning system</p>
-                    <button class="btn btn-info btn-lg fw-semibold text-white">Get Started</button>
-                </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+        <!-- slider end -->
+
+        <!-- courses start -->
+        <section>
+            <div class="container my-5">
+                <div class="courses-header text-center py-5">
+                    <h2 class="fw-bold fs-1">Discover Our Popular <br> Courses</h2>
+                    <p class="fw-semibold">It is a long established fact that a reader will be distracted by the
+                        readable <br> content of a
+                        page
+                        when looking at its layout.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Javascript Basic to advanced</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Fullstack web Development</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Digital Marketing</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Photography Basic Rules</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="card mb-3">
+                            <div class=" row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start w-100"
+                                        alt="course image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body p-4 mt-2">
+                                        <h5 class="fw-semibold fs-4">Motion Graphics</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.</p>
+                                        <p class="fw-bold text-info">Price: 20$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 d-flex justify-content-center mb-5">
+                        <button class="btn btn-info btn-lg fw-bold text-white d-grid mt-5">See More Courses</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- courses end -->
+
+    </main>
 
 
     <!-- Bootstrap -->
