--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 d-none d-lg-block">
                         <div class="card mb-3">
                             <div class=" row g-0">
                                 <div class="col-md-4">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-6  d-none d-lg-block">
                         <div class="card mb-3">
                             <div class=" row g-0">
                                 <div class="col-md-4">
@@ -204,7 +204,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 d-none d-lg-block">
                         <div class="card mb-3">
                             <div class=" row g-0">
                                 <div class="col-md-4">
@@ -224,7 +224,9 @@
                     </div>
 
                     <div class="col-md-12 d-flex justify-content-center mb-5">
-                        <button class="btn btn-info btn-lg fw-bold text-white d-grid mt-5">See More Courses</button>
+                        <button class="btn btn-info btn-lg fw-bold text-white d-grid mt-5 d-none d-lg-block">See More
+                            Courses</button>
+                        <button class="btn btn-info btn-lg fw-bold text-white d-grid mt-5 d-lg-none">View All</button>
                     </div>
 
                 </div>
