describe about ourself

--- a/index.html
+++ b/index.html
@@ -234,6 +234,61 @@
         </section>
         <!-- courses end -->
 
+        <!-- explore start -->
+        <section class="mb-5">
+            <div class="container">
+                <div class="card bg-light">
+                    <div class=" row gx-lg-5 d-flex align-items-center ">
+                        <div class="col-md-5">
+                            <img src="images/working.png" class="img-fluid" alt="working image">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="fw-bold fs-1">Check our edtech platform</h5>
+                                    <p class="lh-base d-none d-lg-block">There are many variations of passages of Lorem
+                                        Ipsum available,
+                                        but
+                                        the
+                                        majority have suffered alteration in some form, by injected humour, or
+                                        randomised
+                                        words which don't look even slightly believable. If you are going to use a
+                                        passage
+                                        of Lorem Ipsum, you need to be sure.</p>
+                                    <p class="">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                                        generators on the Internet tend to repeat predefined.... <span
+                                            class="d-lg-none text-info fw-bold">See More</span>
+                                    </p>
+                                    <div class="row">
+                                        <div class="col-6 col-lg-4">
+                                            <div class="me-lg-5">
+                                                <h2 class="fs-3 fs-lg-1 fw-bold">3.2k+</h2>
+                                                <p class="fs-5">Online Course</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-lg-4">
+                                            <div class="">
+                                                <h2 class="fs-3 fs-lg-1 fw-bold">600+</h2>
+                                                <p class="fs-5">Expert Member</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-6 col-lg-4">
+                                            <div class="">
+                                                <h2 class="fs-3 fs-lg-1 fw-bold">1k+</h2>
+                                                <p class="fs-5">Reting & Review</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-lg btn-info text-white fw-bold mt-3">Read More</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- explore end -->
+
     </main>
 
 
