--- a/index.html
+++ b/index.html
@@ -289,6 +289,32 @@
         </section>
         <!-- explore end -->
 
+        <!-- cta start -->
+        <section>
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-12">
+                        <div
+                            class="cta bg-info d-flex flex-column flex-lg-row justify-content-between align-items-center p-md-5 pb-5">
+                            <div class="cta-left ps-5 py-4">
+                                <h2 class="fs-1 text-white">Ready to join?</h2>
+                                <p class="text-white fs-5 mb-0">It is a long established fact that a reader will be
+                                    distracted by
+                                    <br> the readable
+                                    content of a page when looking at its layout.
+                                </p>
+                            </div>
+                            <div class="cta-right pe-5">
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- cta end -->
+
     </main>
 
 
