--- a/index.html
+++ b/index.html
@@ -295,18 +295,42 @@
                 <div class="row">
                     <div class="col-12">
                         <div
-                            class="cta bg-info d-flex flex-column flex-lg-row justify-content-between align-items-center p-md-5 pb-5">
+                            class="cta rounded bg-info d-flex flex-column flex-lg-row justify-content-between align-items-center p-md-5 pb-5">
                             <div class="cta-left ps-5 py-4">
-                                <h2 class="fs-1 text-white">Ready to join?</h2>
-                                <p class="text-white fs-5 mb-0">It is a long established fact that a reader will be
-                                    distracted by
-                                    <br> the readable
-                                    content of a page when looking at its layout.
+                                <h2 class="fs-1 text-white">Join us today!</h2>
+                                <p class="text-white fs-5 mb-0">We are the best organization of the world.
+                                    <br> Make expert of yourself and get all the courses.
                                 </p>
                             </div>
                             <div class="cta-right pe-5">
 
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-light btn-lg text-info fw-semibold"
+                                    data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    Register Now
+                                </button>
 
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal" tabindex="-1"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Welcome</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                You are most welcome to our education platform. It's the best
+                                                educational platform in the world!
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
