student card added

--- a/index.html
+++ b/index.html
@@ -339,6 +339,61 @@
         </section>
         <!-- cta end -->
 
+        <!-- student start -->
+        <section>
+            <div class="container my-5">
+                <div class="section-header py-4">
+                    <h2 class="fs-1 fw-bold">Meet Our Successfull <br> Students</h2>
+                    <p class="text-gray fw-semibold">There are ours successfull students. They took course and now they
+                        are dominating as a web developer and <br> web designer and others courses students also.<br>
+                        they are looking for their own organization and other opertunities</p>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <div class="card">
+                            <img src="images/student/student-1.png" class="card-img-top mb-2" alt="student image">
+                            <div class="card-body">
+                                <h4 class="">Awlad Hossain</h4>
+                                <p>UI/UX Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <div class="card">
+                            <img src="images/student/student-2.png" class="card-img-top mb-2" alt="student image">
+                            <div class="card-body">
+                                <h4 class="">Sultana Nasrin</h4>
+                                <p>Motion Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <div class="card">
+                            <img src="images/student/student-3.png" class="card-img-top mb-2" alt="student image">
+                            <div class="card-body">
+                                <h4 class="">Imran Seikh</h4>
+                                <p>Graphics Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3 mb-5">
+                        <div class="card">
+                            <img src="images/student/student-4.png" class="card-img-top mb-2" alt="student image">
+                            <div class="card-body">
+                                <h4 class="">Rokeya Islam</h4>
+                                <p>Web Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <button class="btn btn-info btn-lg fw-bold text-white d-grid">View All</button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- student end -->
+
     </main>
 
 
