--- a/index.html
+++ b/index.html
@@ -394,6 +394,48 @@
         </section>
         <!-- student end -->
 
+        <!-- clients start -->
+        <section class="d-none d-lg-block my-5">
+            <div class="container">
+                <h2 class="fs-1 fw-bold text-center mt-5">Works with over 800+ companies</h2>
+
+                <div class="row gx-5 py-4">
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-1.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-2.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-3.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-4.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-5.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-img p-2">
+                            <img src="images/company/company-6.png" alt="clients image" class="img-fluid">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- clients end -->
+
     </main>
 
 
