--- a/index.html
+++ b/index.html
@@ -438,6 +438,38 @@
 
     </main>
 
+    <!-- footer start -->
+    <footer class="bg-dark py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-content text-white text-center">
+                        <h4 class="fs-1 mb-3">Bangla Master</h4>
+                        <p class="mt-5">Office 2, Uttara Sector# 3,</p>
+                        <p>Dhaka - 1230</p>
+                        <p>Privacy Ploicy | Terms of use</p>
+                    </div>
+                    <div class="footer-social">
+                        <ul class="list-unstyled d-flex justify-content-center gap-4">
+                            <li class="bg-secondary p-1 rounded-circle"><a href="#" class="text-white"><i
+                                        class="fa-brands fa-facebook-f"></i></a>
+                            </li>
+                            <li class="bg-secondary p-1 rounded-circle"><a href="#" class="text-white"><i
+                                        class="fa-brands fa-twitter"></i></a>
+                            </li>
+                            <li class="bg-secondary p-1 rounded-circle"><a href="#" class="text-white"><i
+                                        class="fa-brands fa-linkedin-in"></i></a>
+                            </li>
+                            <li class="bg-secondary p-1 rounded-circle"><a href="#" class="text-white"><i
+                                        class="fa-brands fa-tiktok"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
+
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
