--- a/index.html
+++ b/index.html
@@ -394,6 +394,95 @@
         </section>
         <!-- student end -->
 
+        <!-- FAQ start -->
+        <section>
+            <div class="container my-5">
+                <div class="section-header text-center py-4">
+                    <h2 class="fs-1 fw-bold">Frequently Asked Questions</h2>
+                    <p class="text-gray">It is a long established fact that a reader will be distracted by
+                        the readable <br> content of a page when looking at its layout.</p>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-lg-8 mx-auto">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        What is the differences between flexbox and grid?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        Grid is made for two-dimensional layout while Flexbox is for one. This means
+                                        Flexbox can work on either row or columns at a time, but Grids can work on both.
+                                        Flexbox, gives you more flexibility while working on either element (row or
+                                        column).
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        What is the differences between Bootstrap and Tailwind?
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        Bootstrap comes with a set of pre-styled responsive, mobile-first components
+                                        that possess a definite UI kit. Tailwind CSS uses a set of utility classes to
+                                        create a neat UI with more flexibility and uniqueness. Sites created using
+                                        Bootstrap follow the generic pattern that makes them look identical.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        What is css box model?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        The CSS box model is a container that contains multiple properties including
+                                        borders, margin, padding, and the content itself. It is used to create the
+                                        design and layout of web pages. It can be used as a toolkit for customizing the
+                                        layout of different elements.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseFour" aria-expanded="false"
+                                        aria-controls="collapseFour">
+                                        What is a semantic tag?
+                                    </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        The HTML semantics refers to the tags that provide meaning to an HTML page
+                                        rather than just presentation. It makes HTML more comprehensible by better
+                                        defining the different sections and layout of web pages.
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAQ end -->
+
         <!-- clients start -->
         <section class="d-none d-lg-block my-5">
             <div class="container">
