--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <div class="col-12">
                         <div
                             class="cta rounded bg-info d-flex flex-column flex-lg-row justify-content-between align-items-center p-md-5 pb-5">
-                            <div class="cta-left ps-5 py-4">
+                            <div class="cta-left ps-md-5 py-4">
                                 <h2 class="fs-1 text-white">Join us today!</h2>
                                 <p class="text-white fs-5 mb-0">We are the best organization of the world.
                                     <br> Make expert of yourself and get all the courses.
